manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: eplastweb
spec:
    type: ClusterIP
    ports:
    - port: 80
    selector:
        app: eplastweb
