manifests/ingress-prod.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: eplast2
  name: routing-for-eplast-client
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  tls:
  - hosts:
      - eplast2.westeurope.cloudapp.azure.com
    secretName: tls-secret-prd
  rules:
  - host: eplast2.westeurope.cloudapp.azure.com
    http:
      paths:        
      - path: /
        backend:
          serviceName: eplastweb
          servicePort: 80
